--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Task-Manager-Simple Project</h1>
+    <p>Welcome to the project!</p>
 </body>
 </html>
