--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Task-Manager-Simple Project</h1>
     <p>Welcome to the project!!</p>
+    <button>Complete Task</button>
 </body>
 </html>
