--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Task-Manager-Simple Project</h1>
     <p>Welcome to the project!!</p>
-    <button>Complete Task</button>
+    <button id="completeBtn">Complete Task</button>
+
+  <!-- placeholder div for messages -->
+  <div id="message"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
